@@ -1,0 +1,74 @@
+<search function="viam">
+  <name>Maps with viamichelin.com</name>
+  <category>People and Places</category>
+  <contributor>MLL</contributor>
+  <link>http://www.viamichelin.com/</link>
+  <description>
+  Find a map to any place in Europe with viamichelin.com
+    <div class="helpboxDescLabels">Optional switches:</div>
+    <table class="helpboxDescTable">
+      <tr><td>/address</td><td> - </td><td>address</td></tr>
+      <tr><td>/size:{0|100|25|5|1}</td><td> - </td><td>map size (in km). Defaults to 0 (automatic).</td></tr>
+    </table>
+    <div class="helpboxDescLabels">Examples:</div>
+    <table class="helpboxDescTable">
+      <tr><td>viam bordeaux /address:berland</td></tr>
+      <tr><td>viam rimini /size:100</td></tr>
+    </table>
+  </description>
+  <form name="viamf"
+        method="get"
+        action="http://www.viamichelin.com/viamichelin/fra/dyn/controller/ambiguousTest">
+    <input type="hidden" name="act" value="MapHomeVersMapDisplay" />
+    <input type="hidden" name="express" value="true" />
+    <input type="hidden" name="from" value="700" />
+    <input type="hidden" name="intMapScale" value="0" />
+    <input type="hidden" name="strCountry" value="EUR" />
+    <input type="hidden" name="strCity" value="" />
+    <input type="hidden" name="strAddress" value="" />
+  </form>
+  <script><![CDATA[
+    function viam(q)
+    {
+      /*
+      todo:
+      - add support for their very powerful driving directions
+        (but wonder if it's worth it : *lots* of switches needed)
+      - have it behave like mq.xml, so they can be easily exchanged in aliases etc...
+      ...but at least this is a start :)
+      */
+      
+      var args = parseArgs(q, "address, size");
+
+      if( nullArgs("viam", args.q) )
+        return;
+
+      var myaddress ="";
+      if( !( typeof args.switch_val["address"] == "undefined" || args.switch_val["address"] == "" ) )
+      {
+        myaddress=args.switch_val["address"];
+      }
+
+      var mysize = "0";
+      if( !( typeof args.switch_val["size"] == "undefined" || args.switch_val["size"] == "" ) )
+      {
+        mysize=args.switch_val["size"];
+      }
+
+      document.viamf.strAddress.value = myaddress;
+      document.viamf.intMapScale.value = mysize;
+      document.viamf.strCity.value = args.q;
+
+      submitForm(viamf);
+    }
+  ]]></script>
+  <copyright>
+    The following applies if this file is included and distributed with Dave's Quick Search Deskbar:
+    Copyright (c) 2002 David Bau; Distributed under the terms of the GNU Public License, Version 2 (http://www.gnu.org/copyleft/gpl.txt)
+  </copyright>
+  <created_by>
+    This search file was initially created on 10/14/02 at 15:04:31
+    by Dave's Quick Search Deskbar Search Wizard version 0.9.1 (beta),
+    Copyright (c) 2002 Glenn Carr; Distributed under the terms of the GNU General Public License, Version 2
+  </created_by>
+</search>
