@@ -11,6 +11,7 @@ New Searches
 * tgn - Search the Getty Thesaurus of Geographical Names (from Tim Aiello)
 * arin - Search the Arin Whois database at www.arin.net/whois (from Tim Aiello)
 * ubl - the Ultimate Band List by ArtistDirect (from Darren Greenberg)
+* viam - Find a map to any place in Europe with viamichelin.com
 
 Modified Searches
 
